--- a/FORGE/afonsomarques/classes/class_06/iPython - lesson - (pandas)-2.ipynb
+++ b/FORGE/afonsomarques/classes/class_06/iPython - lesson - (pandas)-2.ipynb
@@ -60,9 +60,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'avg_m' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\johan\\greends-ipython\\FORGE\\afonsomarques\\classes\\class_06\\iPython - lesson - (pandas)-2.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/johan/greends-ipython/FORGE/afonsomarques/classes/class_06/iPython%20-%20lesson%20-%20%28pandas%29-2.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m plt\u001b[39m.\u001b[39mfigure()\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/johan/greends-ipython/FORGE/afonsomarques/classes/class_06/iPython%20-%20lesson%20-%20%28pandas%29-2.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m#series we want to plot from dataframe\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/johan/greends-ipython/FORGE/afonsomarques/classes/class_06/iPython%20-%20lesson%20-%20%28pandas%29-2.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m avg_m[\u001b[39m'\u001b[39m\u001b[39mtasmax\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mplot(label\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mMax Temp\u001b[39m\u001b[39m'\u001b[39m, color\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39morange\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/johan/greends-ipython/FORGE/afonsomarques/classes/class_06/iPython%20-%20lesson%20-%20%28pandas%29-2.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m avg_m[\u001b[39m'\u001b[39m\u001b[39mtasmin\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mplot(label\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mMin Temp\u001b[39m\u001b[39m'\u001b[39m, color\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mblue\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/johan/greends-ipython/FORGE/afonsomarques/classes/class_06/iPython%20-%20lesson%20-%20%28pandas%29-2.ipynb#W6sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# adding title to the plot\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'avg_m' is not defined"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#visualize series of a dataframe\n",
     "import matplotlib.pyplot as plt\n",
@@ -186,7 +207,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -200,12 +221,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "43c891b8ec44cd41362f25fe9f96b5c11f058b1f257f4fbe1a27a0706b819511"
+    "hash": "7d3132c63595c5bd9835a7d3d4e82d2178644ed42d28c98d306a1f36334182b0"
    }
   }
  },
