--- a/ASSIGNMENTS/GroupAssignment/iPython - Group Assignment.ipynb
+++ b/ASSIGNMENTS/GroupAssignment/iPython - Group Assignment.ipynb
@@ -5,7 +5,11 @@
    "metadata": {},
    "source": [
     "# Group Assignment\n",
-    "(João Palma - Master GreenDS)"
+    "(João Palma - Master GreenDS)\n",
+    "\n",
+    "- Group 1 - Luís, Beatriz, Ella, Johanna\n",
+    "- Group 2 - Diogo, Afonso, Vasco, Inês\n",
+    "- Group 3 - António, Miguel, Samuel, Aziza, Joana"
    ]
   },
   {
