small typo (24h and not 24 days)

--- a/ASSIGNMENTS/GroupAssignment/iPython - Group Assignment.ipynb
+++ b/ASSIGNMENTS/GroupAssignment/iPython - Group Assignment.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "The decision to irrigate relies on the following 3 premises:\n",
     "- Soil water tension (pF) should be above certain threshold defined by user/farmer (e.g. 3.2 log (-h))\n",
-    "- Irrigation decision should account for the rain forescast in the next 24 days, i.e. if ammount of rain is over a certain threshold (defined by user), no need to irrigate (e.g. 2 mm)\n",
+    "- Irrigation decision should account for the rain forescast in the next 24 hours, i.e. if ammount of rain is over a certain threshold (defined by user), no need to irrigate (e.g. 2 mm)\n",
     "- Irrigation, even if needed, should not occur if vapour pressure deficit is below a certain threshold, defined by user (e.g. 0.5 kPa)\n",
     "\n",
     "Each group will focus on a part of this tool\n",
