--- a/ASSIGNMENTS/GroupAssignment/iPython - Group Assignment.ipynb
+++ b/ASSIGNMENTS/GroupAssignment/iPython - Group Assignment.ipynb
@@ -52,7 +52,8 @@
     "- Pull request needs to be done by one member of the group\n",
     "- Each group only edits their file. Only pull requests of your group file will be accepted\n",
     "- First attempt: 11th January 2023\n",
-    "- Deadline: 25th January 2023"
+    "- Deadline: 25th January 2023\n",
+    "- Facultative: You are free to further develop the group3_endpoint.py, in particular the decision algorithm and visualization. You just need to create group3_endpoint_YourName.py and commit/push/PR "
    ]
   }
  ],
