--- a/oop_encapsulation_example_2.ipynb
+++ b/oop_encapsulation_example_2.ipynb
@@ -70,9 +70,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "edOyEn_qZPhi",
-        "outputId": "cbe27aa4-34e8-49a6-f687-d1e881ef9e8f"
+        "outputId": "e4366d60-1355-4cfd-c657-3646b47c6439"
       },
-      "execution_count": 12,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,15 +94,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MCJQpWMwZU1z",
-        "outputId": "16709f2c-5d0a-45a1-8eed-d795c3c4a101"
+        "outputId": "ac1a9ee5-9dbe-4401-ac3b-e495771b2bea"
       },
-      "execution_count": 15,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "20\n"
+            "Rose costs 10\n"
           ]
         }
       ]
@@ -118,9 +118,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SKbgDlEqZhfw",
-        "outputId": "e539880a-00a0-4fe0-c53d-73b317619c1c"
+        "outputId": "0bc92550-a48b-4fbc-e5e0-3da83d6fba79"
       },
-      "execution_count": 14,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
