--- a/oop_inheritance_example_1.ipynb
+++ b/oop_inheritance_example_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoOOUHTMNuQh93iaLflRx1",
+      "authorship_tag": "ABX9TyOIJan8LXxFz4CAWwcEwkZT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,14 @@
       "cell_type": "markdown",
       "source": [
         "This script illustrates the concept of **inheritance** in OOP\n",
-        "Inheritance is a way of creating a new class for using details of an existing class without modifying it.\n",
-        "The newly formed class is a derived class (or child class). Similarly, the existing class is a base class (or parent class).\n",
+        "Inheritance is a way of creating a new class for using details of an existing class without modifying it. The script also illustrates the concept of **polymorphism** in Python, that allows the same entity (method or operator or object) to perform different operations in different scenarios.\n",
         "\n",
         "In this example we have:\n",
         "* parent class `Tray` with attributes `species`, `number_of_plants` and `is_usable`. The class has a method `is_empty` that returns True or False.\n",
         "* child class `SingleUseTray` inherits from `Tray`. The child class has a method `remove_plants` that returns a list of Plant objects.\n",
         "* child class `MultipleUseTray` inherits from `Tray`. The child class has a different method `remove_plants` that also returns a list of Plant objects\n",
+        "\n",
+        "Therefore, `remove_plants` is an example of **polymorphism** since this method has a distint functionality in each class.\n",
         "\n",
         "The code ilustrates how `SingleTray` and `MultipleUseTray` can inherit attributes and methods from the parent class:\n",
         "* Attributes `species` and `number_of_plants` are inherited from the parent class.\n",
